Dropdown alignment fix

--- a/sass/components/dropdown/_dropdown.scss
+++ b/sass/components/dropdown/_dropdown.scss
@@ -16,7 +16,7 @@ $dropdown-menu-min-height: map-get($pv-sizes, small);
 
 .dropdown-menu {
   // display: none;
- position: absolute;
+  // position: absolute;
   // top: 100%;
   @include box-shadow-regular();
   z-index:98; // #todo
